<resources>
    <string name="app_name">Praca_Licencjacka</string>
    <string name="title_activity_login">partyHub</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="searchEvents">Search events</string>
    <string name="addEvent">Add event</string>
    <string name="title_activity_search_event">Map</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_description">Description</string>
    <string name="action_add_event">Add</string>

    <string name="hint_username">username: </string>
    <string name="hint_title">event: </string>
    <string name="hint_description">description: </string>
    <string name="event_details">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="event_sign_in">Add to event</string>
    <string name="event_sign_out">Remove from event</string>
    <string name="prompt_fromDate">Before</string>
    <string name="prompt_toDate">After</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_category">Categories</string>
    <string name="hint_startDate">date created:</string>
    <string name="hint_endDate">end date:</string>
    <string name="hint_category">category:</string>
    <string name="user_list">User list</string>
    <string name="user_count">Count:</string>
    <string name="prompt_title">Event title</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="date_creation">Date creation</string>
    <string name="liked_events">Number of liked events</string>
    <string name="hint_cityname">Address:</string>

</resources>
