<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_color"
    tools:context="pl.code_zone.praca_licencjacka.EventDetailsActivity">

    <TextView
        android:text="@string/hint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleHint"
        android:textColor="@color/half_black"
        android:textSize="16sp" />

    <TextView
        android:text="@string/hint_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameHint"
        android:textColor="@color/half_black"
        android:textSize="12sp"
        android:layout_below="@+id/titleHint"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/hint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionHint"
        android:textColor="@color/half_black"
        android:textSize="12sp"
        android:layout_below="@+id/usernameHint"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/title"
        android:textColor="@color/fontColor"
        android:layout_alignBottom="@+id/titleHint"
        android:layout_toEndOf="@+id/descriptionHint"
        android:layout_marginLeft="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/username"
        android:textColor="@color/fontColor"
        android:layout_below="@+id/title"
        android:layout_alignStart="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/description"
        android:textColor="@color/fontColor"
        android:layout_alignTop="@+id/descriptionHint"
        android:layout_toEndOf="@+id/descriptionHint"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/event_sign_in"
        style="@android:style/TextAppearance.Material.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_sign_in"
        android:layout_weight="6.47"
        android:background="@drawable/button_border"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/event_sign_in" />

</RelativeLayout>
