<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_details_color"
    android:id="@+id/afterLoad"
    android:padding="3dp">


    <TextView
        android:text="@string/hint_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameHint"
        android:textColor="@color/half_black"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/username"
        android:textColor="@color/fontColor"
        android:layout_below="@+id/title"
        android:layout_alignStart="@+id/description"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp" />

    <TextView
        android:text="@string/hint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleHint"
        android:textColor="@color/half_black"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/title"
        android:textColor="@color/fontColor"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/username"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp" />

    <TextView
        android:text="@string/hint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionHint"
        android:textColor="@color/half_black"
        android:textSize="12sp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_alignTop="@+id/description"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/description"
        android:textColor="@color/fontColor"
        android:layout_below="@+id/username"
        android:layout_toEndOf="@+id/descriptionHint"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp" />

</LinearLayout>